Add light and shadow to the ball

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="rotate-div">
       <div class="number-8">8</div>
       <div class="message-circle"></div>
-    </div>   
+    </div>
+    <div class="light-spot"></div>   
   </div>
   <script src="main.css"></script>
 </body>
