Resize ball and start triangle

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
   <div class="ball">
     <div class="rotate-div">
       <div class="number-8">8</div>
-      <div class="message-circle"></div>
+      <div class="message-circle">
+        <div class="triangle"></div>
+        <div class="message"></div>
+      </div>
     </div>
     <div class="light-spot"></div>   
   </div>
-  <script src="main.css"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
