Add responses and background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="number-8">8</div>
       <div class="message-circle">
         <div class="triangle"></div>
-        <div class="message"></div>
+        <div class="message">
+          <p></p>
+        </div>
       </div>
     </div>
     <div class="light-spot"></div>   
